--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <h4 class="ariticle"> 
         <li><span >ariticle </span><span> Talk</span></li>
     </h4>
+    <img src="4.gif" alt="My Image">
+
     <hr>
     <h5>From Wikipedia,the free encyclopedia</h5>
     <h4 class="about-ariticle" >
